[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.8"
dog-auth = "0.1.7"
dog-auth-local = "0.1.7"
dog-axum = "0.1.7"
dog-core = { version = "0.1.7", features = ["serde", "adapters"] }
dog-typedb = "0.1.7"
dotenvy = "0.15.7"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
typedb-driver = "3.8.1"
